--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
-    "next-auth": "beta",
+    "next-auth": "^5.0.0-beta.25",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.3.0",
